# Simple378

./: .env  .env.auth.example  .env.example  .env.production  .env.production.example  .env.staging  .env.staging.example  .env.test  .frenly-config  .gitignore  .pre-commit-config.yaml  01_LOGIN.md  05_TRANSACTION_CATEGORIZATION.md  06_RECONCILIATION.md  09_VISUALIZATION.md  10_SUMMARY.md  ACTIONABLE_RECOMMENDATIONS.md  ADJUDICATION_QUEUE_DIAGNOSTIC_REPORT.md  AGENTS.md  AI_AUTOMATION_README.md  ANALYSIS_COMPLETE.md  APP_DIAGNOSIS.md  ARCHITECTURE_CONSOLIDATION_SUMMARY.md  BACKEND_API_ANALYSIS.md  BRANCH_ANALYSIS.md  BUILD_STATUS.md  CLEANUP_SUMMARY.md  CODEOWNERS  CODE_REVIEW_SUMMARY.md  COMMIT_9523894_INTEGRATION_ANALYSIS.md  COMPONENT_INVENTORY.md  COMPREHENSIVE_DIAGNOSIS_AND_RECOMMENDATIONS.md  COMPREHENSIVE_DIAGNOSTIC_REPORT.md  COMPREHENSIVE_FIX_SUMMARY.md  COMPREHENSIVE_PAGE_ANALYSIS.md  COMPREHENSIVE_SYSTEM_DIAGNOSTIC_2025.md  CONFIGURATION_FIXES_COMPLETE.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_QUICKSTART.md  CONSOLIDATION_SUMMARY.txt  (+102 more)
.agent/: CHEATSHEET.md  (+4 more)
backend/: .dockerignore  .env  .env.example  .env.test  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.prod  README.md  create_user.py  pyproject.toml  requirements-auth.txt  requirements-production.txt  requirements.txt  seed_data.py  setup-auth.sh  setup.sh  test_login_direct.py  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 337b92c0ede9_merge_heads.py  5994161dc89c_add_tenant_id_to_users_and_subjects.py  5d9fe59097a3_add_mens_rea_tables_fixed.py  828ecdd9302d_add_adjudication_fields.py  990bce74e362_add_ai_feedback_and_metrics_tables.py  9c219539b2ba_merge_milestones_and_events_schema_.py  a8c308abf630_add_transactions_table.py  add_milestones_table.py  auth_enhancement_001.py  b9c4e8f20a3d_add_chain_of_custody.py  c1380048a93a_add_search_personalization_models.py  c708e8d6f85d_add_evidence_models.py  ca8819f168df_change_transaction_amount_to_numeric.py  ee31389c661e_add_event_model_and_update_schema.py  f003540a778f_initial_migration.py  f4d6982845bb_merge_heads.py  f844a6d9cc61_change_transaction_amount_to_numeric.py
backend/app/: main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: api.py
backend/app/core/: auth_enhanced.py  cache.py  config.py  context.py  correlation_id.py  database_validator.py  deployment.py  env_validator.py  error_handler.py  exceptions.py  file_limits.py  heuristic_rules.py  logging.py  metrics.py  middleware.py  monitoring.py  permissions.py  query_optimizer.py  rate_limit.py  rate_limiting.py  rbac.py  request_tracking.py  resilience.py  scaling_config.py  security.py  security_headers.py  telemetry.py  tracing.py  validation.py  websocket.py  websocket_metrics.py  websocket_ratelimit.py
backend/app/db/: base.py  models.py  session.py
backend/app/graphql/: __init__.py  schema.py  types.py
backend/app/models/: ai_feedback.py  mens_rea.py  mfa.py  oauth.py  transaction.py  webauthn.py
backend/app/orchestration/: orchestrator.py
backend/app/schemas/: ai.py  alert.py  analysis.py  audit.py  common.py  consent.py  event.py  feedback.py  mens_rea.py  summary.py  tenant.py  token.py  transaction.py  user.py
backend/app/services/: README.md  anomaly_detection.py  auto_mapper.py  automated_decisions.py  cache_service.py  chain_of_custody.py  compliance_report.py  document_indexing.py  entity_resolution.py  event_service.py  forensics.py  graph_analytics.py  graph_analyzer.py  heuristic_engine.py  ingestion.py  meilisearch_service.py  mfa_service.py  oauth_service.py  offline.py  predictive_modeling.py  reconciliation.py  redaction_analyzer.py  report_generator.py  reporting.py  risk_forecast.py  sar_generator.py  scoring.py  search_personalization.py  subject.py  timescale_service.py  vector_service.py  visualization.py  visualization_service.py  webauthn_service.py  workflow_engine.py
backend/app/services/ai/: automated_investigation.py  case_classifier.py  evidence_analysis.py  llm_service.py  ml_model_trainer.py  orchestrator.py  persona_analyzer.py  predictive_fraud_prevention.py  predictive_modeler.py  prompts.py  supervisor.py  tools.py
backend/app/services/cdn/: cdn_manager.py
backend/app/services/compliance/: compliance_automation.py
backend/app/services/detectors/: mirroring.py  structuring.py  velocity.py
backend/app/services/monitoring/: load_tester.py
backend/app/services/performance/: database_optimizer.py
backend/app/services/scaling/: horizontal_scaler.py
backend/app/services/security/: advanced_security.py  multi_tenant_manager.py
backend/docker-entrypoint-initdb.d/: 01-optimize.sql  02-timescale-optimize.sql
backend/scripts/: integrate_core_modules.py  reset_staging_db.py  seed_staging.py  seed_test_data.py
backend/tests/: conftest.py  conftest_improved.py  test_ai_endpoints.py  test_api_crud.py  test_auth.py  test_core_integration.py  test_dashboard_metrics.py  test_orchestrator.py  test_visualization.py  test_visualization_service.py
backend/tests/integration/: test_additional.py  test_auth.py  test_file_processing.py  test_fraud_detection.py  test_gdpr.py  test_orchestration.py  test_subjects_batch.py  test_websocket_auth.py
(+750 files in other folders)
